<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cegah_covid_19_dengan"
        android:gravity="center"
        android:textSize="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olahraga_untuk_meningkatkan_imun"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/push"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pushup"/>
    <Button
        android:id="@+id/situp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/situp"/>
    <Button
        android:id="@+id/skiping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skiping"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/layanan_pengguna"
        android:layout_marginTop="40dp"/>

    <Button
        android:id="@+id/id_dial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dial"
        />
    <Button
        android:id="@+id/id_wa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/whatsapp"
        />



</LinearLayout>